fixed alignment issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ html {
    clear: both;
 }
 .wrapper {
-    max-width: 1240px;
+    max-width: 1400px;
     margin: 0 auto;
     padding: 0 2.5rem;
 }
@@ -150,11 +150,16 @@ a:link {
 }
 
 .courses__ind-course {
+    display: flex;
+    flex-direction: column;
     position: relative;
     background-color: hsl(var(--white));
     padding: 3.5rem 2rem;
     box-shadow: 0px 25px 50px rgba(6, 22, 141, 0.0442381);
     border-radius: 1rem;
+}
+.courses__ind-course a {
+    margin-top: auto;
 }
 .courses__icon {
     position: absolute;
